infrastructure/node-main/ns-media/base/homepage/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homepage
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
