infrastructure/node-main/ns-media/base/homepage/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  ingressClassName: traefik
  rules:
    - host: homepage.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  name: http
